--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   "dependencies": {
     "@mdi/font": "5.9.55",
     "axios": "^1.2.1",
+    "bootstrap": "^5.2.3",
     "core-js": "^3.8.3",
+    "jquery": "^3.6.3",
     "roboto-fontface": "*",
     "vue": "^3.2.13",
+    "vue-cookies": "^1.8.2",
     "vue-router": "^4.1.6",
     "vuetify": "^3.0.0-beta.0",
     "vuex": "^4.1.0",
@@ -28,6 +31,7 @@
     "deepmerge": "^4.2.2",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "expose-loader": "^4.0.0",
     "sass": "~1.32",
     "sass-loader": "^13.2.0",
     "vue-cli-plugin-vuetify": "~2.5.8",
